fixed nav bar alignment bug

--- a/src/app/navigation-bar/navigation-bar.component.sass
+++ b/src/app/navigation-bar/navigation-bar.component.sass
@@ -9,14 +9,12 @@
     margin-left: auto
     flex-wrap: wrap
 
-#bgdiv
-    padding: 5px
-
 #homespan
     color: $color-textondark
     font-size: 25px
     font-weight: bold
     line-height: 30px
+    margin: 5px
 
 .icon_svg
     width: 25px
